# extended-mypy-django-plugin

./: DEVELOPMENT.rst  README.rst  manage.py  mypy.ini  pyproject.toml  pytest.ini  tox.ini  types
.github/workflows/: ci.yml  ciold.yml  lint.yml  lintold.yml
djangomypytest/: asgi.py  settings.py  urls.py  views.py  wsgi.py
djangomypytest/exampleapp/: apps.py  models.py
djangomypytest/exampleapp/migrations/: 0001_initial.py  0002_child1_child2.py
djangomypytest/mypy_plugin/: __init__.py  annotations.py  plugin.py
docs/: conf.py  index.rst
docs/api/: changelog.rst  installation.rst  primer.rst  tracking-changes.rst  usage.rst
docs/api/internals/: dependencies.rst  index.rst  store.rst
example/: mypy.ini
example/djangoexample/: settings.py
example/djangoexample/exampleapp/: models.py
extended_mypy_django_plugin/: actions.py  annotations.py  assertions.py  concrete_children.py  entry.py  impl.py  main.py  plugin.py
extended_mypy_django_plugin/plugin/: _actions.py  _concrete_children.py  _config.py  _dependencies.py  _fullnames.py  _helpers.py  _hook.py  _known_annotations.py  _plugin.py  _reports.py  _store.py
extended_mypy_django_plugin/plugin/actions/: __init__.py  _annotation_resolver.py  _sem_analyze.py  _type_analyze.py  _type_checker.py
extended_mypy_django_plugin/reports/: __init__.py
extended_mypy_django_plugin/scripts/: __init__.py  get_installed_apps.py
scripts/: make_old.patch  mypy.ini  tests_extension_hook.py
scripts/leader/: models.py
scripts/myapp/: models.py
scripts/myapp2/: models.py
scripts/test_helpers/: pyproject.toml
scripts/test_helpers/extended_mypy_django_plugin_test_driver/: extension_hook.py  output_builder.py  plugin.py  scenario.py
tests/: test_concrete_annotation.yml  test_concrete_annotations.py  test_errors.py  test_works.py  test_works.yml
tools/: devtools.py  requirements.dev.txt  requirements.docs.txt  venv
