[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangomypytest"
dynamic = ["version"]
description = "Trying to make mypy understand .objects on abstract django models"
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
dependencies = [
    "django==4.2.9",
    "django-stubs==4.2.7",
    "psycopg2-binary==2.9.9"
]

[tool.hatch.version]
path = "djangomypytest/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/djangomypytest",
]

[tool.ruff]
target-version = "py310"
line-length = 99
extend-exclude = [
    ".DS_Store",
    ".pytest_cache",
    "tools/.python",
    "tools/deps",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "B008",  # mutable objects as function argument defaults
    "B015",  # flake8-bugbear (useless-comparison)
    "I",  # isort
    "T20",  # flake8-print
    "UP",  # pyupgrade
    "RUF",
    "F",
]

[tool.mypy]
exclude = [
    ".DS_Store",
    ".pytest_cache",
    "tools/.python",
    "tools/deps",
    "__pycache__",
]
plugins = [
    "djangomypytest.mypy_plugin.plugin"
]

[tool.django-stubs]
django_settings_module = "djangomypytest.settings"
